--- a/app/src/main/res/layout-large-land/activity_maps.xml
+++ b/app/src/main/res/layout-large-land/activity_maps.xml
@@ -40,7 +40,7 @@
                 android:background="@color/toolbarMapColor"/>
             <FrameLayout
                 android:id="@+id/article_details_maps"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
                 android:background="@color/secundary">
