--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="192dp"
+    android:id="@+id/frame_layout_drawer"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
@@ -9,14 +10,25 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
         android:src="@drawable/drawer_image" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_margin="20dp"
-        android:text="CulturAstur"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        android:textStyle="bold" />
+        <ImageView
+            android:id="@+id/imageIcon"
+            android:layout_gravity="bottom"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:scaleType="fitXY"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/ic_launcher" />
+        <TextView
+            android:layout_gravity="bottom"
+            android:layout_width="match_parent"
+            android:layout_above="@id/imageIcon"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="120dp"
+            android:text="CulturAstur"
+            android:textSize="30dp"
+            android:layout_marginBottom="5dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:textStyle="bold" />
 
 </FrameLayout>
